--- a/Laboratorium_1.ipynb
+++ b/Laboratorium_1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:94fb139bc28a3d50469aeee82aef8fbebe7b3c17158cc08163727637b475df07"
+  "signature": "sha256:8c6c714e48aa5e7302e55ac779f8fd9efe5a1bca38423004ebeb32b967489ebd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,11 +43,39 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Ala ma kota.\\tAnia ma psa.\" \n",
+      "puts \"Ala ma kota.\\vAnia ma psa.\"\n",
+      "puts \"Ala ma kota.\\nAnia ma psa.\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala ma kota.\tAnia ma psa.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala ma kota.\u000b",
+        "Ania ma psa.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala ma kota.\n",
+        "Ania ma psa.\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -65,11 +93,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts 'Ala ma kota.\\nAnia ma psa.'"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala ma kota.\\nAnia ma psa.\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -97,11 +135,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "imie = \"Aniu\"\n",
+      "puts \"Witaj #{15+5*2}!\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 25!\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -119,11 +168,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "imie = \"Aniu\"\n",
+      "puts \"Witaj \" + imie"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj Aniu\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -144,11 +204,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "imie = \"Aniu\"\n",
+      "puts \"Witaj \" + imie\n",
+      "liczba = 2\n",
+      "puts \"Witaj \" + \"#{liczba}\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj Aniu\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -167,10 +247,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "liczba = 2\n",
+      "puts \"Witaj \" + liczba.to_s"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -191,10 +283,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "liczba = 2\n",
+      "puts 'Witaj #{liczba}'"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj #{liczba}\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -237,11 +341,40 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tekst = <<END_OF_STRING\n",
+      "Remember those walls I built?\n",
+      "Well, baby they're tumbling down\n",
+      "And they didn't even put up a fight\n",
+      "They didn't even make a sound\n",
+      "I found a way to let you in\n",
+      "But, I never really had a doubt\n",
+      "Standing in the light of your halo\n",
+      "I got my angel now\n",
+      "END_OF_STRING\n",
+      "\n",
+      "puts tekst"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Remember those walls I built?\n",
+        "Well, baby they're tumbling down\n",
+        "And they didn't even put up a fight\n",
+        "They didn't even make a sound\n",
+        "I found a way to let you in\n",
+        "But, I never really had a doubt\n",
+        "Standing in the light of your halo\n",
+        "I got my angel now\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -273,10 +406,38 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"-\" * 30 + \"Tytu\u0142\" + \"-\" * 30\n",
+      "title = \"tytul\"\n",
+      "puts \"-\" * 30 + title + \"-\" * 30\n",
+      "puts \"-\" * (30 + title.size + 30 )"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "------------------------------Tytu\u0142------------------------------\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "------------------------------tytul------------------------------\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "-----------------------------------------------------------------\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -293,10 +454,39 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tekst = \"Remember those walls I built? \"\n",
+      "puts tekst.object_id\n",
+      "tekst << \"Well, baby they're tumbling down\"\n",
+      "puts tekst.object_id\n",
+      "puts tekst"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "25689640\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "25689640\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Remember those walls I built? Well, baby they're tumbling down\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -313,10 +503,39 @@
     {
      "cell_type": "code",
      "collapsed": true,
-     "input": [],
+     "input": [
+      "tekst = \"Remember those walls I built? \"\n",
+      "puts tekst.object_id\n",
+      "tekst = tekst + \"Well, baby they're tumbling down\"\n",
+      "puts tekst.object_id\n",
+      "puts tekst"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "25713960\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "25712340\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Remember those walls I built? Well, baby they're tumbling down\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -332,7 +551,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "puts \"Liczba %.2f\" % 3.567891"
+      "puts \"Liczba %.2f Napis: %s\" % [3.567891, \"napis\"]"
      ],
      "language": "python",
      "metadata": {},
@@ -341,11 +560,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Liczba 3.57\n"
+        "Liczba 3.57 Napis: napis\n"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -360,121 +579,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/home/fox/.rvm/gems/ruby-2.1.2/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `zmq_recvmsg'"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        ": "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "Interrupt"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `__recvmsg__'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:321:in `recvmsg'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:342:in `recv_string'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/iruby-0.1.13/lib/iruby/session.rb:37:in `recv'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/iruby-0.1.13/lib/iruby/kernel.rb:59:in `run'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/bin/iruby:23:in `load'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/bin/iruby:23:in `<main>'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/bin/ruby_executable_hooks:15:in `eval'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /home/fox/.rvm/gems/ruby-2.1.2/bin/ruby_executable_hooks:15:in `<main>'\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
