--- a/Laboratorium_1a.ipynb
+++ b/Laboratorium_1a.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:075280053c847b14deef4b0931e3ca46ac6db30828cc28be07c9d6abb982f4d6"
+  "signature": "sha256:2531e0d7f36410ba989736b424c82bce52c62354976ea4b2a18dda58c9ef436a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -378,11 +378,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a= \"\"\n",
+      "puts a.empty?\n",
+      "b=\"cos\"\n",
+      "puts b.empty?"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "true\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "false\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -402,11 +422,46 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"\u65e5\u672c\u8a9e\".class\n",
+      "puts \"\u65e5\u672c\u8a9e\".bytesize\n",
+      "\n",
+      "puts \"\u0141\u00f3d\u017a\".size\n",
+      "puts \"\u0141\u00f3d\u017a\".bytesize"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "String\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "9\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7\n"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -425,11 +480,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"\u65e5\u672c\u8a9e\".force_encoding(\"iso-8859-2\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\u0107\u0097\u013d\u0107\u009c\u0179\u010d\u015e\u009e\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -447,10 +512,29 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"paczka\".index(\"a\")\n",
+      "puts \"paczka\".rindex(\"a\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -467,10 +551,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[2]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "\"d\""
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -485,10 +581,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[2..4]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "\"d\u017a\""
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -504,10 +612,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[-2..-1]\n",
+      "\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "\"d\u017a\""
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -529,12 +650,27 @@
      "collapsed": false,
      "input": [
       "url = \"http://pl.wikipedia.org/wiki/Polska\"\n",
-      "# tutaj wstaw sw\u00f3j kod"
+      "\n",
+      "=begin\n",
+      "a = url.rindex(\"/\")\n",
+      "puts url[a+1..-1]\n",
+      "=end\n",
+      "\n",
+      "url[url.rindex(\"/\")+1..-1]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "\"Polska\""
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -558,10 +694,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Warszawa\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "\"WARSZAWA\""
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -577,11 +725,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"\u0141\u00f3d\u017a\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\u0141\u00f3D\u017a\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -605,10 +763,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "require 'string_case_pl'\n",
+      "\"\u0141\u00f3d\u017a\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "\"\u0141\u00d3D\u0179\""
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -624,11 +795,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"zbyt     wieeeeleee     spacji     \".squeeze(\"e\").squeeze(\" \")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "\"zbyt wiele spacji \""
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -643,10 +825,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"      niepotrzebne spacje          \".strip"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "\"niepotrzebne spacje\""
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -661,11 +855,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"hello \\n\".chomp"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "\"hello \""
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -682,11 +887,29 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Ala ma kota\".sub(/a/,\"o\")\n",
+      "puts \"Ala ma kota\".sub(/a/i,\"o\") #nie zwraca uwagi na wielko\u015b\u0107 liter"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Alo ma kota\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ola ma kota\n"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -701,10 +924,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\".gsub(/a/,\"o\")\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "\"Alo mo koto\""
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "heading",
@@ -726,14 +961,26 @@
      "collapsed": false,
      "input": [
       "napis = \"W domu by\u0142o 10 kot\u00f3w i 5 ps\u00f3w\"\n",
-      "# Tutaj wstaw kod zamieniaj\u0105cy cyfry na znak x.\n",
-      "# Rezultatem jego wywo\u0142ania powinien by\u0107 napis \"W domu by\u0142o xx kot\u00f3w oraz x ps\u00f3w\"\n",
-      "# Mo\u017cesz r\u00f3wnie\u017c napisa\u0107 wyra\u017cenie, kt\u00f3rego rezultatem jest napis \"W domu by\u0142o x kot\u00f3w oraz x ps\u00f3w\""
+      "\n",
+      "=begin\n",
+      "puts napis.gsub(/[0-9]/, \"x\")\n",
+      "puts napis.gsub(/\\d/, \"x\").squeeze(\"x\")\n",
+      "=end\n",
+      "\n",
+      "puts napis.gsub(/\\d+/, \"x\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "W domu by\u0142o x kot\u00f3w i x ps\u00f3w\n"
+       ]
+      }
+     ],
+     "prompt_number": 40
     },
     {
      "cell_type": "heading",
@@ -765,10 +1012,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Warto\u015b\u0107 liczby to \" + 10.to_s"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "\"Warto\u015b\u0107 liczby to 10\""
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
@@ -786,11 +1045,37 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Warto\u015b\u0107 liczby to \" + 10.to_s(2)\n",
+      "puts \"Warto\u015b\u0107 liczby to \" + 10.to_s(8)\n",
+      "puts \"Warto\u015b\u0107 liczby to \" + 10.to_s(16)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Warto\u015b\u0107 liczby to 1010\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Warto\u015b\u0107 liczby to 12\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Warto\u015b\u0107 liczby to a\n"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "markdown",
@@ -807,10 +1092,37 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"10\".to_i\n",
+      "puts \"10\" + \"20\"\n",
+      "puts \"10\".to_i + \"20\".to_i"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "10\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1020\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "30\n"
+       ]
+      }
+     ],
+     "prompt_number": 46
     },
     {
      "cell_type": "markdown",
@@ -825,10 +1137,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"100\".to_i(2)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "4"
+       ]
+      }
+     ],
+     "prompt_number": 47
     },
     {
      "cell_type": "markdown",
@@ -844,10 +1168,29 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"1.5\".to_i\n",
+      "puts \"1.5\".to_f"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.5\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "heading",
@@ -867,11 +1210,28 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "=begin\n",
+      "a = \"AFC\"\n",
+      "puts b= a.to_i(16)\n",
+      "puts b.to_s(8)\n",
+      "=end\n",
+      "\n",
+      "\"AFC\".to_i(16).to_s(8)\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 58,
+       "text": [
+        "\"5374\""
+       ]
+      }
+     ],
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
@@ -889,11 +1249,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Ala ma kota, a kot jest persem.\".split"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[\"Ala\", \"ma\", \"kota,\", \"a\", \"kot\", \"jest\", \"persem.\"]\n"
+       ]
+      }
+     ],
+     "prompt_number": 65
     },
     {
      "cell_type": "markdown",
@@ -908,11 +1278,27 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Ala ma kota, a kot jest persem.\".split(/[,.?!]?\\s|[,.?!]$/).join(\"\\n\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala\n",
+        "ma\n",
+        "kota\n",
+        "a\n",
+        "kot\n",
+        "jest\n",
+        "persem\n"
+       ]
+      }
+     ],
+     "prompt_number": 66
     },
     {
      "cell_type": "heading",
@@ -945,11 +1331,59 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "napis = \"Janek\"\n",
+      "nowy_napis = napis.downcase\n",
+      "puts nowy_napis\n",
+      "puts napis\n",
+      "\n",
+      "napis = \"Janek\"\n",
+      "nowy_napis = napis.downcase!\n",
+      "puts nowy_napis\n",
+      "puts napis\n",
+      "\n",
+      "puts \"  POWITANIE    ZE   SPACJJAMI  \".squeeze.strip.downcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "powitanie ze spacjami\n"
+       ]
+      }
+     ],
+     "prompt_number": 70
     },
     {
      "cell_type": "markdown",
@@ -985,12 +1419,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "napis = \"II Klasa szko\u0142y podstawowej. Ala ma kota. To kot, a to Ala.\""
+      "napis = \"II Klasa szko\u0142y podstawowej. Ala ma kota. To kot, a to Ala.\"\n",
+      "napis.upcase.squeeze(\"I\").gsub(/A/,\"O\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 71,
+       "text": [
+        "\"I KLOSO SZKO\u0141Y PODSTOWOWEJ. OLO MO KOTO. TO KOT, O TO OLO.\""
+       ]
+      }
+     ],
+     "prompt_number": 71
     }
    ],
    "metadata": {}
